feat: add chatbot embed integration
Co-authored-by: Amanda Alejandra Campos Rodríguez <amanda.rod@uc.cl>
Co-authored-by: Sofía Pedraza Lobos <sofa.pedraza@uc.cl>

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <script>
+      (function () {
+        if (!window.chatbase || window.chatbase("getState") !== "initialized") {
+          window.chatbase = (...arguments) => {
+            if (!window.chatbase.q) window.chatbase.q = [];
+            window.chatbase.q.push(arguments);
+          };
+          window.chatbase = new Proxy(window.chatbase, {
+            get(target, prop) {
+              if (prop === "q") return target.q;
+              return (...args) => target(prop, ...args);
+            },
+          });
+        }
+
+        const onLoad = () => {
+          const script = document.createElement("script");
+          script.src = "https://www.chatbase.co/embed.min.js";
+          script.id = "ofre9FZoBepXxbCeyBQ3b";
+          script.domain = "www.chatbase.co";
+          document.body.appendChild(script);
+        };
+
+        if (document.readyState === "complete") onLoad();
+        else window.addEventListener("load", onLoad);
+      })();
+    </script>
+
     <title>UC CHRISTUS</title>
   </head>
   <body>
