change chatbot id and clean commentaries

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         const onLoad = () => {
           const script = document.createElement("script");
           script.src = "https://www.chatbase.co/embed.min.js";
-          script.id = "1zjsjyjWoxf_bkJxxdT8A";
+          script.id = "bBZqdTWmNcigPGgt9LC9v";
           script.domain = "www.chatbase.co";
           document.body.appendChild(script);
         };
@@ -44,4 +44,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
